# contract-risk-env

./: .gitignore  Dockerfile  README.md  contracts_corpus.json  expand_corpus.py  inference.py  openenv.yaml  pyproject.toml  security_scan_report.md
contract_risk_env/: README.md  client.py  inference.py  models.py  pyproject.toml  requirements.txt
contract_risk_env/data/: contracts_corpus.json
contract_risk_env/server/: Dockerfile  app.py  corpus.py  environment.py
server/: app.py  corpus.py  environment.py  graders.py
